root/src/css/seattletimes.less
@import "values";
@import "flexbox";

//defensive coding
* {
  //border-box, you're the best
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;

  //Safari, you're the worst
  -webkit-tap-highlight-color: transparent;
}

//elements
body {
  color: @df-off-black;
  font-family: @df-serif;
  font-size: @df-text-base;
  line-height: @df-line-base;
  padding: 0;
  margin: 0;
  //remove 300ms click delay in Safari, AKA still the worst
  touch-action: manipulation;
}

main {
  display: block;

  &.interactive {
    padding: 20px 10px;
    margin: 20px auto;
    border-top: 1px solid @df-light-gray;
    border-bottom: 1px solid @df-light-gray;
    font-family: @df-sans;
  }
}

a {
  color: @df-blue;
  text-decoration: none;

  &:visited {
    color: @df-middle-gray;
  }

  &:hover, &:focus {
    color: @df-navy;
  }

  img {
    border: none;
  }
}

img, video, embed, object, iframe {
  max-width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  color: @df-off-black;
  margin: @df-line-base 0 (@df-line-base/2) 0;
}

h1 {
  font-size: 28px;
  line-height: 30 / 28;
  letter-spacing: -0.5px;

  @media @tablet {
    font-size: 42px;
    line-height: 46 / 42;
    letter-spacing: -1px;
  }
}
h2 {
  font-size: 24px;
  line-height: @df-line-base;
}
h3 {
  font-size: 22px;
  line-height: 23 / 22;
}
h4 {
  font-size: 16px;
  font-weight: 600;
  line-height: 24 / 16;
  margin: @df-line-base/2 0 0 0;
}


//common style elements

.byline {
  font-size: 18px;
  margin: 24px auto;

  @media @tablet {
    padding: 0 16px;
    padding-top: 40px;

  }

  @media @mobile {
    padding: 0 16px;
    padding-top: 40px;

  }

  .staff {
    font-style: italic;
    font-size: 16px;
  }

  .date {
    font-size: 16px;
    font-family: @df-sans;
    color: @df-dark-gray;
  }
}

//header and menu
nav.main-nav {
  background: white;
  border-bottom: 1px solid @df-light-gray;
  box-shadow: 0 2px 7px rgba(0, 0, 0, .1);
  position: relative;
  line-height: 1;
  z-index: 999;

  .wrapper {
    max-width: 1020px;
    margin: auto;
    position: relative;
    padding: 10px;

    @media @mobile {
      padding: 6px;
    }
  }

  .logo {
    display: block;
    vertical-align: middle;

    img {
      // width: 310px;
      height: 24px;
      max-height: 100%;

      @media @mobile {
        height: 18px;
      }
    }
  }

  .share.top {
    position: absolute;
    top: 10px;
    right: 10px;

    @media @tablet {
      right: 4px;
      width: auto !important;
    }

    label {
      background: white !important;
    }

    @media @mobile {
      top: 6px;

      label {
        span {
          display: none;
        }
      }

      .left {
        margin-left: -275px !important;
      }
    }
  }
}

.ad {
  text-align: center;
  margin: 16px auto;

  &.pending {
    &::before {
      display: block;
      content: "";
      background: @df-light-gray;
    }

    &[data-type="banner"],
    &[data-type="bannerBottom"]{
      max-width: 728px;
      &::before {
        padding-bottom: percentage(90 / 728);
      }
    }

    &[data-type="tall"] {
      max-width: 300px;
      &::before {
        padding-bottom: percentage(600 / 300);
      }
    }

    &[data-type="square"] {
      max-width: 300px;
      &::before {
        padding-bottom: percentage(250 / 300);
      }
    }
  }
}

.subscribe-box {
  padding: 0;

  h2 {
    margin: 0;
  }

  img {
    display: inline-block;
    padding-right: 10px;
    height: 24px;

    @media @mobile {
      display: block;
      margin: 24px auto;
      padding-right: 0;
    }
  }

  .button-box {
    padding-top: 10px;
    .display-flex();
    .justify-content(center);
    .align-items(center);

    @media @mobile {
      display: block;
      text-align: center;
    }
  }

  .subscribe-button {
    display: inline-block;
    background: @df-blue;
    padding: 12px 15px 10px 15px;
    color: white;
    font-weight: bold;
    font-size: 14px;
    letter-spacing: .08em;

    &:hover {
      background: @df-light-gray;
    }
  }
}

.show-comments {
  border: 1px solid @df-blue;
  padding: 20px;
  text-align: center;
  text-transform: uppercase;
  font-family: @df-sans;
  font-weight: bold;
  font-size: 15px;
  color: @df-blue;
  cursor: pointer;
  margin: 20px 0;
}

.thin-div {
  border-bottom: 1px solid @df-light-gray;
  margin-bottom: 15px;
  font-family: @df-sans;
  margin: auto;
  max-width: 900px;

  .center {
    position: relative;
    top: 15px;
    margin: auto;
    width: 105px;
    text-align: center;
    font-size: 20px;
    background: white;
  }
}

.dont-miss {
  .display-flex;
  .flex-wrap(wrap);
  margin: auto;
  margin-top: 15px;
  max-width: 900px;
  font-size: 17px;
  font-family: @df-sans;

  .story {
    .flex(0 0 25%);

    @media @mobile {
      .flex(1 1 50%)
    }
  }
  .padded {
    padding: 10px;
  }
  img {
    width: 100%;
  }
  a {
    color: @df-dark-gray;
    transition: color .1s linear;

    &:hover {
      color: @df-blue;
    }
  }
  .small {
    font-weight: bold;
    font-size: 15px;
  }
}

footer.nav-bottom {
  background: black;
  opacity: 0.95;
  padding: 8px 8px 4px 8px;
  position: relative;
  z-index: 99;

  .logo {
    float: left;
    margin-right: 10px;

    img {
      margin-top: 5px;
      height: 20px;
    }
  }

  &::after {
    clear: both;
    content: " ";
    display: block;
  }

  .share.bottom {
    float: right;
    margin-top: 2px;

    label {
      background: black !important;
      color: white !important;
    }
  }
}

